assets/main.css
/* Color design tokens */

.dark-mode {
  --color-scheme: dark;
  --color-white: #120817;
  --color-black: #ffffff;
  --color-text: #ffffff;
  --color-grey-text: #aa91b6;
  --color-grey-graphic: #84738c;
  --color-grey-bg: #37293d;

  --color-bg: #1c1320;
  --color-card-bg: #120817;
  --color-card-border: var(--color-grey-bg);

  --color-purple: #c18cd9;
  --color-purple-bg: #362a3c;
  --color-purple-text: #e7e1ea;

  --color-green: #00a854;
  --color-green-bg: #133927;
  --color-green-text: #d9f2e5;

  --color-orange: #ff8c00;
  --color-orange-bg: #4d2a00;
  --color-orange-text: #ffa333;

  --color-yellow: #f2f20d;
  --color-yellow-bg: #ffff00;
  --color-yellow-text: #57570f;

  --color-red: #e83030;
  --color-red-bg: #570f0f;
  --color-red-text: #ff7575;

  --color-blue: #0000ff;
  --color-blue-bg: #000080;
  --color-blue-text: #b3b3ff;

  --shadow-color: 282deg 42% 2%;

  --color-input-bg: #121212;
  --color-select-bg: #121212;
}

.light-mode {
  --color-scheme: light;
  --color-white: #ffffff;
  --color-black: #000000;
  --color-text: #161616;
  --color-grey-text: #666666;
  --color-grey-graphic: #808080;
  --color-grey-bg: #e6e6e6;

  --color-bg: #f6f4f7;
  --color-card-bg: #ffffff;
  --color-card-border: transparent;

  --color-purple: #582e6b;
  --color-purple-bg: #e7e1ea;
  --color-purple-text: #654f6f;

  --color-green: #007a3d;
  --color-green-bg: #d9f2e5;
  --color-green-text: #06793f;

  --color-orange: #ff5c00;
  --color-orange-bg: #ffdfcc;
  --color-orange-text: #a04009;

  --color-yellow: #f2f20d;
  --color-yellow-bg: #fafa9e;
  --color-yellow-text: #57570f;

  --color-red: #ce1a1a;
  --color-red-bg: #ffcccc;
  --color-red-text: #910808;

  --color-blue: #0000ff;
  --color-blue-bg: #ccccff;
  --color-blue-text: #000080;

  --shadow-color: 277deg 8% 60%;

  --color-input-bg: white;
  --color-select-bg: white;

  .card,
  .dialog {
    --color-input-bg: white;
    --color-select-bg: #eeeef1;
  }
}

:root {
  /* Border radius design tokens */
  --radius-xs: 1px;
  --radius-sm: 5px;
  --radius-md: 8px;
  --radius-lg: 22px;
  --radius-full: 999px;

  /* Font size design tokens */
  --font-size-xxl: 2rem;
  --font-size-xl: 1.5rem;
  --font-size-lg: 1.25rem;
  --font-size-md: 1rem;
  --font-size-sm: 0.9rem;
  --font-size-xs: 0.8rem;
  --font-size-xxs: 0.7rem;

  /* Utility design tokens */
  --color-accent: var(--color-purple);
  --color-accent-bg: var(--color-purple-bg);
  --color-accent-text: var(--color-purple-text);
  --focus-color: var(--color-black);

  /* Shadow design token */
  --shadow-1: 0.3px 0.3px 0.6px hsl(var(--shadow-color) / 0),
    1.3px 1.3px 2.8px hsl(var(--shadow-color) / 0.52);
  --shadow-2: 0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.18),
    0.9px 1.7px 2.4px -0.5px hsl(var(--shadow-color) / 0.22),
    1.9px 3.9px 5.4px -1.1px hsl(var(--shadow-color) / 0.27),
    4.4px 8.8px 12.3px -1.6px hsl(var(--shadow-color) / 0.31);
  --shadow-3: 0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.19),
    1.6px 3.3px 4.6px -0.3px hsl(var(--shadow-color) / 0.22),
    3px 6px 8.4px -0.5px hsl(var(--shadow-color) / 0.24),
    4.9px 9.8px 13.7px -0.8px hsl(var(--shadow-color) / 0.27),
    7.8px 15.6px 21.8px -1.1px hsl(var(--shadow-color) / 0.3),
    12.2px 24.5px 34.3px -1.4px hsl(var(--shadow-color) / 0.33),
    18.8px 37.5px 52.5px -1.6px hsl(var(--shadow-color) / 0.35);

  /* Animation design tokens */
  @media (prefers-reduced-motion: no-preference) {
    --duration-sm: 0.15s;
    --duration-md: 0.35s;
    --duration-lg: 0.65s;
    --duration-xl: 1.35s;

    scroll-behavior: smooth;
  }
}

.font-size-xxl {
  font-size: var(--font-size-xxl);
}
.font-size-xl {
  font-size: var(--font-size-xl);
}
.font-size-lg {
  font-size: var(--font-size-lg);
}
.font-size-md {
  font-size: var(--font-size-md);
}
.font-size-sm {
  font-size: var(--font-size-sm);
}
.font-size-xs {
  font-size: var(--font-size-xs);
}
.font-size-xxs {
  font-size: var(--font-size-xxs);
}

/* CSS Reset */
*,
*::after,
*::before {
  box-sizing: border-box;
}

html {
  color-scheme: var(--color-scheme, dark light);
  accent-color: var(--color-accent, inherit);

  -webkit-text-size-adjust: none;
  -moz-text-size-adjust: none;
  text-size-adjust: none;

  /* prevent obscured content when using the keyboard to shift focus */
  scroll-padding-block: 2rem;
  @media (min-width: 360px) {
    scroll-padding-block: 4rem;
  }
}

dd {
  margin-inline-start: 0;
}

body {
  margin: 0;
  min-height: 100svh;
  background-color: var(--color-bg);
  font-family: system-ui, sans-serif;
  line-height: 1.5;
  overflow-wrap: word-break;
}

img,
picture,
svg {
  display: block;
  max-width: 100%;
  object-fit: cover;
}

a {
  color: currentColor;
  outline-offset: 4px;

  &:focus-visible {
    outline: 2px solid var(--focus-color);
  }
}

h1,
h2,
h3,
h4,
button,
input,
label,
legend {
  line-height: 1.2;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
  -webkit-hyphens: auto;
  hyphens: auto;
}

p {
  text-wrap: pretty;
  white-space: pre-line;
  max-width: 65ch;
}

dl {
  margin-block: 0;
}

ul,
ol {
  padding-inline-start: 1rem;
  margin-block: 0;

  p {
    margin-block: 0rem 1rem;
  }
}

ul[role='list'],
ol[role='list'] {
  list-style: none;
  padding-inline-start: 0;
}

ul > li::marker {
  color: inherit;
}

ol > li::marker {
  color: var(--color-accent);
}

code {
  font-family: monospace;
  font-size: 0.9em;
  background-color: var(--color-grey-bg);
  padding: 0.15rem 0.25rem;
  border-radius: var(--radius-xs);
  white-space: pre-wrap;
}

pre {
  white-space: pre-wrap;
}

kbd {
  font-family: system-ui;
  background-color: var(--color-white);
  border-radius: var(--radius-sm);
  padding-inline: 0.5rem;
  padding-block: 0.35rem;
  border: 1px solid var(--color-grey-bg);
}

hr {
  border: 0;
  height: 1px;
  background-color: var(--color-grey-bg);
  margin-block: 0;
}

table {
  border-collapse: collapse;
  text-align: left;
  font-variant-numeric: tabular-nums;

  th {
    font-weight: 600;
  }

  thead th {
    color: var(--color-grey-text);
  }

  th,
  td {
    padding: 0.5rem;
  }

  thead tr {
    border-color: var(--color-grey-bg);
    border-style: solid;
    border-width: 0 0 1px 0;
  }

  tbody tr:not(:first-of-type) {
    border-color: var(--color-grey-bg);
    border-style: solid;
    border-width: 1px 0;
  }
}

button {
  cursor: pointer;
  font: inherit;
  color: inherit;
  font-weight: 600;

  &:focus-visible {
    outline: 2px solid var(--focus-color);
  }
}

:disabled {
  cursor: default;
}

.button-group {
  display: inline-flex;
  flex-wrap: wrap;
  gap: 0.5rem;

  > * {
    flex-grow: 1;
  }
}

label:not(.disabled) {
  cursor: pointer;
  -webkit-user-select: none;
  user-select: none;
  font-weight: 500;
}

fieldset {
  border: none;
  padding: 0;
  margin-inline: 0;
}

legend {
  padding: 0;
  font-weight: 600;
}

textarea {
  padding: 0.5rem;
  resize: vertical;
}

input {
  background-color: transparent;
}

.form-field-wrapper {
  display: inline-grid;
  align-items: center;
  align-content: start;

  label {
    display: inline-flex;
    gap: 0.35rem;
    min-height: 1.25rem;
    align-items: center;
    font-size: var(--font-size-xs);
    margin-block-end: 0.25rem;
  }

  &:has(:disabled) {
    opacity: 35%;
  }

  .radio,
  .checkbox,
  .select {
    &:not(:disabled) {
      cursor: pointer;
    }
  }

  .select,
  .input,
  .textarea {
    font-family: system-ui, sans-serif;
    font-size: 16px;
    width: 100%;
    border: 1px solid var(--color-grey-graphic);
    border-radius: var(--radius-sm);

    &:focus {
      outline: 1px solid var(--focus-color);
      border-color: var(--focus-color);
    }

    &::placeholder {
      color: var(--color-grey-graphic);
    }
  }
}

.error-wrapper {
  .error {
    display: none;
    align-items: center;
    gap: 0.25rem;
    color: var(--color-red);
    font-size: var(--font-size-xs);
    padding-block-start: 0.25rem;
  }
}

.show-invalid,
.invalid {
  .select,
  .textarea,
  .input {
    &:invalid {
      /* outline: 1px solid var(--color-red); */
      border-color: var(--color-red);

      + .error-wrapper .error {
        display: flex;
      }
    }
  }
}

.visuallyhidden {
  position: absolute;
  z-index: -1;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

/* Animations */
@keyframes rotate {
  to {
    transform: rotate(1turn);
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes fadeOut {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}

